@@ -29,11 +29,14 @@ ImGui.SetColor("testbullet2", ImGuiColor.Text, 0, 0.5, 1, 1)
 ImGui.AddElement("tree1", "", ImGuiElement.BulletText, "Bullet point 3")
 ImGui.AddElement("cat1", "", ImGuiElement.Separator)
 ImGui.AddElement("cat1", "button1", ImGuiElement.Button, "A funky button")
-ImGui.AddCallback("button1", ImGuiCallback.Hovered, function(i) print("Hover") end)
+ImGui.AddCallback("button1", ImGuiCallback.Hovered, function(_) print("Hover") end)
 ImGui.AddElement("cat1", "", ImGuiElement.SameLine)
 ImGui.AddElement("cat1", "button2", ImGuiElement.Button, "A button in the same line")
 ImGui.SetTextColor("button2", 1, 0, 0, 0.75)
 ImGui.SetColor("button2", ImGuiColor.Button, 1, 1, 0, 1)
+ImGui.AddElement("cat1", "button3", ImGuiElement.Button, "A button causing an error")
+ImGui.AddCallback("button3", ImGuiCallback.Clicked, function(_) VARIABLE_DOESNT_EXIST:Test() end)
+ImGui.SetColor("button3", ImGuiColor.Button, 1, 0, 0, 1)
 
 --------- CATEGORY WINDOWS ---------
 ImGui.AddElement("testWindow2", "catWindows", ImGuiElement.CollapsingHeader, "Windows / Popups")
